Added files with fonts and created header in html

--- a/index.html
+++ b/index.html
@@ -9,4 +9,70 @@
     <link href="main.css" rel="stylesheet" type="text/css" />
     <link href="animate.css" rel="stylesheet" />
   </head>
+  <body>
+    <header>
+      <section class="face">
+        <div class="container">
+          <div class="hcontact">
+            <a href="#" class="numbers">
+              <div class="number">
+                <i class="fas fa-mobile-alt"></i>
+                <span>6337 3128</span>
+              </div></a
+            >
+            <a href="#" class="mails">
+              <div class="mail">
+                <i class="fas fa-envelope"></i>
+                <span>info@business.co</span>
+              </div></a
+            >
+            <a href="#" target="_blank">
+              <i class="fab fa-facebook-f facebk"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+      <section class="novigate">
+        <div class="container">
+          <div class="blok1">
+            <div class="hlogo_">
+              <a href="#" class="numbers">
+                <div class="hlogo">
+                  <span class="logo">Business</span><br /><span
+                    >Tagline goes here</span
+                  >
+                </div>
+              </a>
+            </div>
+            <div class="hnovigate">
+              <ul>
+                <a href="#" class="home" target="_blank"> <li>Home</li></a>
+                <a href="#" class="about" target="_blank"> <li>About Us</li></a>
+                <a href="#" class="approch" target="_blank">
+                  <li>Our Approch</li></a
+                >
+                <a href="#" class="work" target="_blank"> <li>Our Work</li></a>
+              </ul>
+              <a href="#" class="btm right" target="_blank"
+                >Free Consultation</a
+              >
+            </div>
+          </div>
+          <!-- /block1 -->
+        </div>
+        <!-- /container -->
+      </section>
+      <section class="hello">
+        <div class="container">
+          <div class="hface">
+            <h1>We Providing</h1>
+            <p class="rule">Social Media marketing for businesses</p>
+            <button type="submit" class="btm yellow down">
+              Free Consultation
+            </button>
+          </div>
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
