--- a/index.html
+++ b/index.html
@@ -74,5 +74,298 @@
         </div>
       </section>
     </header>
+    <section class="descriptdescript">
+      <div class="container">
+        <div class="blok2">
+          <div class="aboutus">
+            <h2>About Us</h2>
+            <p>We are added our major Services</p>
+            <div class="line"></div>
+          </div>
+          <div class="bar">
+            <div class="facebook">
+              <img
+                src="aboutus_jpg/one.svg"
+                class="onefc"
+                alt="Facebook Marketing"
+              />
+              <h3>Facebook Marketing</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Standard dummy text ever.
+              </p>
+            </div>
+            <div class="book">
+              <img
+                src="aboutus_jpg/two.svg"
+                class="twobk"
+                alt="Creating landing pages"
+              />
+              <h3>landing pages Creation</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Standard dummy text ever.
+              </p>
+            </div>
+            <div class="message">
+              <img
+                src="aboutus_jpg/three.svg"
+                class="threemes"
+                alt="Advertising"
+              />
+              <h3>Ads management</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Standard dummy text ever.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="approch3">
+      <div class="container">
+        <div class="blok3">
+          <div class="title3">
+            <h2>Our Approch</h2>
+            <p>Check Our approches step by step ( how we do it )</p>
+            <div class="line"></div>
+          </div>
+          <div class="step1">
+            <div class="redblock">
+              <p class="num">1</p>
+              step
+            </div>
+            <img src="approch_png/st1.png" alt="Camera" class="imgst1" />
+            <div class="text">
+              <h3 class="approchstep">Step 1 : Heading Here</h3>
+              <p class="steps">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+
+          <div class="step2">
+            <div class="redblock even">
+              <p class="num">2</p>
+              step
+            </div>
+            <img src="approch_png/st2.png" alt="Mountains" class="imgst1" />
+            <div class="text">
+              <h3 class="approchstep">Step 2 : Heading Here</h3>
+              <p class="steps">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+
+          <div class="step3">
+            <div class="redblock">
+              <p class="num">3</p>
+              step
+            </div>
+            <img src="approch_png/st3.png" alt="Your office" class="imgst1" />
+            <div class="text">
+              <h3 class="approchstep">Step 3 : Heading Here</h3>
+              <p class="steps">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+
+          <div class="step4">
+            <div class="redblock even">
+              <p class="num">4</p>
+              step
+            </div>
+            <img
+              src="approch_png/st4.png"
+              alt="Organizer, your work place"
+              class="imgst1"
+            />
+            <div class="text">
+              <h3 class="approchstep">Step 4 : Heading Here</h3>
+              <p class="steps">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="ourwork">
+      <div class="container">
+        <div class="block4">
+          <div class="title4">
+            <h2>Our Work</h2>
+            <p>We are added our featured works below</p>
+            <div class="line forblock4"></div>
+          </div>
+          <div class="project_bar">
+            <div class="miniblock one">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Facebook marketing</p>
+            </div>
+            <div class="previews">
+              <img
+                src="ourwork_jpg/slide2.jpg"
+                class="photos_of_project"
+                alt="Camera"
+              />
+            </div>
+            <div class="miniblock two">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Landing page</p>
+            </div>
+            <div class="previews">
+              <img
+                src="ourwork_jpg/slide4.jpg"
+                class="photos_of_project"
+                alt="Tree"
+              />
+            </div>
+          </div>
+          <div class="secondrow">
+            <div class="miniblock one">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Facebook marketinp</p>
+            </div>
+            <div class="previews">
+              <img
+                src="ourwork_jpg/slide6.jpg"
+                class="photos_of_project"
+                alt="Wooden bridge"
+              />
+            </div>
+            <div class="miniblock two">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Landing page</p>
+            </div>
+            <div class="previews">
+              <img
+                src="ourwork_jpg/slide8.jpg"
+                class="photos_of_project"
+                alt="Road in the forest"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="datas">
+      <div class="container">
+        <div class="block5">
+          <div class="title5">
+            <h2>Get Your Free Facebook Analysis Now</h2>
+            <p>Enter your details below</p>
+          </div>
+          <div class="clintdatas">
+            <input type="checkbox" id="modal" />
+            <label class="open_form" for="modal"
+              ><i class="_icon-pointer-down"></i>
+            </label>
+
+            <form action="#" class="popup animated">
+              <p class="statistic">
+                Sit down with our experts to receive a free customized marketing
+                plan for your busi-
+              </p>
+              <p class="statistic sc_line">
+                ness + Learn How To Use Google and Facebook to get 5000% ROI or
+                more
+              </p>
+              <input
+                type="text"
+                name="name"
+                placeholder="Your Name"
+                required
+                class="form_forclients"
+              />
+              <input
+                type="tel"
+                name="phone"
+                placeholder="Contact Number"
+                required
+                class="form_forclients"
+              />
+              <input
+                type="text"
+                name="text"
+                placeholder="Company Name"
+                required
+                class="form_forclients"
+              />
+
+              <button
+                type="submit"
+                class="btm yellow _btm5block"
+                title="Close the window"
+              >
+                submit now
+              </button>
+              <label class="close_btn" for="modal">x</label>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <h3 class="end">Get in touch</h3>
+        <div class="social_icons">
+          <a href="#" class="socialFoot" target="_blank">
+            <i class="fab fa-facebook-f social"></i
+          ></a>
+          <a href="#" class="socialFoot" target="_blank">
+            <i class="fab fa-twitter social"></i
+          ></a>
+          <a href="#" class="socialFoot" target="_blank">
+            <i class="fab fa-google-plus-g social"></i
+          ></a>
+          <a href="#" class="socialFoot" target="_blank">
+            <i class="fab fa-linkedin-in social"></i
+          ></a>
+        </div>
+        <p class="pEnd">
+          Subscribe to our newsletter to stay update with what is new
+        </p>
+        <form action="#" class="for_email">
+          <input
+            type="email"
+            name="email"
+            placeholder="Email Address"
+            required
+            class="address"
+          />
+          <button type="submit" class="btnEnd">Subscribe</button>
+        </form>
+      </div>
+      <p class="pEnd_after_container">
+        Cssauthor.com © 2014 All Rights Reserved
+      </p>
+    </footer>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/slick.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/f7f9cac740.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
