--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business. Tagline goes here</title>
     <link href="iconscss/pointers_svg/style.css" rel="stylesheet" />
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="animate.css" rel="stylesheet" />
   </head>
   <body>
@@ -74,7 +74,7 @@
         </div>
       </section>
     </header>
-    <section class="descriptdescript">
+    <section class="descript">
       <div class="container">
         <div class="blok2">
           <div class="aboutus">
