--- a/index.html
+++ b/index.html
@@ -34,26 +34,28 @@
       </section>
       <section class="novigate">
         <div class="container">
-          <div class="blok1">
-            <div class="hlogo_">
-              <a href="#" class="numbers">
-                <div class="hlogo">
+          <div class="block1">
+            <a href="#" class="logo_main_page">
+              <div class="hlogo">
+                <img src="logo.png" alt="Logo" />
+                <div class="logo_text">
                   <span class="logo">Business</span><br /><span
                     >Tagline goes here</span
                   >
                 </div>
-              </a>
-            </div>
+              </div>
+            </a>
+
             <div class="hnovigate">
-              <ul>
-                <a href="#" class="home" target="_blank"> <li>Home</li></a>
-                <a href="#" class="about" target="_blank"> <li>About Us</li></a>
-                <a href="#" class="approch" target="_blank">
-                  <li>Our Approch</li></a
-                >
-                <a href="#" class="work" target="_blank"> <li>Our Work</li></a>
-              </ul>
-              <a href="#" class="btm right" target="_blank"
+              <a href="#" class="home" target="_blank">Home</a>
+              <img src="dot.png" alt="Separator" class="dot" />
+              <a href="#" class="about" target="_blank">About Us</a>
+              <img src="dot.png" alt="Separator" class="dot" />
+              <a href="#" class="approch" target="_blank"> Our Approch</a>
+              <img src="dot.png" alt="Separator" class="dot" />
+              <a href="#" class="work" target="_blank">Our Work</a>
+
+              <a href="#" class="btn right" target="_blank"
                 >Free Consultation</a
               >
             </div>
@@ -67,7 +69,7 @@
           <div class="hface">
             <h1>We Providing</h1>
             <p class="rule">Social Media marketing for businesses</p>
-            <button type="submit" class="btm yellow down">
+            <button type="submit" class="btn yellow down">
               Free Consultation
             </button>
           </div>
@@ -79,7 +81,7 @@
         <div class="blok2">
           <div class="aboutus">
             <h2>About Us</h2>
-            <p>We are added our major Services</p>
+            <p class="title5_p">We are added our major Services</p>
             <div class="line"></div>
           </div>
           <div class="bar">
@@ -128,13 +130,15 @@
         <div class="blok3">
           <div class="title3">
             <h2>Our Approch</h2>
-            <p>Check Our approches step by step ( how we do it )</p>
+            <p class="title5_p">
+              Check Our approches step by step ( how we do it )
+            </p>
             <div class="line"></div>
           </div>
           <div class="step1">
             <div class="redblock">
-              <p class="num">1</p>
-              step
+              <span class="num">1</span>
+              <span class="num_text">step</span>
             </div>
             <img src="approch_png/st1.png" alt="Camera" class="imgst1" />
             <div class="text">
@@ -150,8 +154,8 @@
 
           <div class="step2">
             <div class="redblock even">
-              <p class="num">2</p>
-              step
+              <span class="num">2</span>
+              <span class="num_text">step</span>
             </div>
             <img src="approch_png/st2.png" alt="Mountains" class="imgst1" />
             <div class="text">
@@ -167,8 +171,8 @@
 
           <div class="step3">
             <div class="redblock">
-              <p class="num">3</p>
-              step
+              <span class="num">3</span>
+              <span class="num_text num_3_4">step</span>
             </div>
             <img src="approch_png/st3.png" alt="Your office" class="imgst1" />
             <div class="text">
@@ -184,8 +188,8 @@
 
           <div class="step4">
             <div class="redblock even">
-              <p class="num">4</p>
-              step
+              <span class="num">4</span>
+              <span class="num_text num_3_4">step</span>
             </div>
             <img
               src="approch_png/st4.png"
@@ -210,7 +214,7 @@
         <div class="block4">
           <div class="title4">
             <h2>Our Work</h2>
-            <p>We are added our featured works below</p>
+            <p class="title5_p">We are added our featured works below</p>
             <div class="line forblock4"></div>
           </div>
           <div class="project_bar">
@@ -243,7 +247,7 @@
             <div class="miniblock one">
               <i class="far fa-paper-plane"></i>
               <h3>Project Name</h3>
-              <p>Facebook marketinp</p>
+              <p>Facebook marketing</p>
             </div>
             <div class="previews">
               <img
@@ -273,7 +277,7 @@
         <div class="block5">
           <div class="title5">
             <h2>Get Your Free Facebook Analysis Now</h2>
-            <p>Enter your details below</p>
+            <p class="title5_p">Enter your details below</p>
           </div>
           <div class="clintdatas">
             <input type="checkbox" id="modal" />
@@ -314,7 +318,7 @@
 
               <button
                 type="submit"
-                class="btm yellow _btm5block"
+                class="btn yellow _btn5block"
                 title="Close the window"
               >
                 submit now
@@ -360,9 +364,6 @@
         Cssauthor.com © 2014 All Rights Reserved
       </p>
     </footer>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/script.js" type="text/javascript"></script>
-    <script src="js/slick.min.js"></script>
     <script
       src="https://kit.fontawesome.com/f7f9cac740.js"
       crossorigin="anonymous"
