Added alert in button

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="bar">
             <div class="facebook">
               <img
-                src="aboutus_jpg/one.svg"
+                src="aboutus_jpg/one.png"
                 class="onefc"
                 alt="Facebook Marketing"
               />
@@ -99,7 +99,7 @@
             </div>
             <div class="book">
               <img
-                src="aboutus_jpg/two.svg"
+                src="aboutus_jpg/two.png"
                 class="twobk"
                 alt="Creating landing pages"
               />
@@ -111,7 +111,7 @@
             </div>
             <div class="message">
               <img
-                src="aboutus_jpg/three.svg"
+                src="aboutus_jpg/three.png"
                 class="threemes"
                 alt="Advertising"
               />
@@ -288,9 +288,7 @@
             <form action="#" class="popup animated">
               <p class="statistic">
                 Sit down with our experts to receive a free customized marketing
-                plan for your busi-
-              </p>
-              <p class="statistic sc_line">
+                plan for your busi-<br />
                 ness + Learn How To Use Google and Facebook to get 5000% ROI or
                 more
               </p>
@@ -320,6 +318,7 @@
                 type="submit"
                 class="btn yellow _btn5block"
                 title="Close the window"
+                onclick="alert('Спасибо за данные, но это демо-версия сайта. Отправка отменена.')"
               >
                 submit now
               </button>
@@ -368,5 +367,6 @@
       src="https://kit.fontawesome.com/f7f9cac740.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js.js"></script>
   </body>
 </html>
