--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span>info@business.co</span>
               </div></a
             >
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" class="icon_fb">
               <i class="fab fa-facebook-f facebk"></i>
             </a>
           </div>
@@ -36,23 +36,18 @@
         <div class="container">
           <div class="block1">
             <a href="#" class="logo_main_page">
-              <div class="hlogo">
-                <img src="logo.png" alt="Logo" />
-                <div class="logo_text">
-                  <span class="logo">Business</span><br /><span
-                    >Tagline goes here</span
-                  >
-                </div>
-              </div>
+              <img src="logo.png" alt="Logo" class="logo_main_page" />
             </a>
 
             <div class="hnovigate">
-              <a href="#" class="home" target="_blank">Home</a>
-              <img src="dot.png" alt="Separator" class="dot" />
-              <a href="#" class="about" target="_blank">About Us</a>
-              <img src="dot.png" alt="Separator" class="dot" />
-              <a href="#" class="approch" target="_blank"> Our Approch</a>
-              <img src="dot.png" alt="Separator" class="dot" />
+              <a href="#" class="home nav_link" target="_blank">Home</a>
+
+              <a href="#" class="about nav_link" target="_blank">About Us</a>
+
+              <a href="#" class="approch nav_link" target="_blank">
+                Our Approch</a
+              >
+
               <a href="#" class="work" target="_blank">Our Work</a>
 
               <a href="#" class="btn right" target="_blank"
@@ -133,7 +128,7 @@
             <p class="title5_p">
               Check Our approches step by step ( how we do it )
             </p>
-            <div class="line"></div>
+            <div class="line line_approch3"></div>
           </div>
           <div class="step1">
             <div class="redblock">
@@ -158,7 +153,7 @@
               <span class="num_text">step</span>
             </div>
             <img src="approch_png/st2.png" alt="Mountains" class="imgst1" />
-            <div class="text">
+            <div class="text text_row_reverse">
               <h3 class="approchstep">Step 2 : Heading Here</h3>
               <p class="steps">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -196,7 +191,7 @@
               alt="Organizer, your work place"
               class="imgst1"
             />
-            <div class="text">
+            <div class="text text_row_reverse">
               <h3 class="approchstep">Step 4 : Heading Here</h3>
               <p class="steps">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -363,6 +358,7 @@
         Cssauthor.com © 2014 All Rights Reserved
       </p>
     </footer>
+
     <script
       src="https://kit.fontawesome.com/f7f9cac740.js"
       crossorigin="anonymous"
