--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
             <div class="hnovigate">
               <a href="#" class="home nav_link" target="_blank">Home</a>
-
+              <img src="dot.png" alt="dot" class="dot" />
               <a href="#" class="about nav_link" target="_blank">About Us</a>
-
+              <img src="dot.png" alt="dot" class="dot" />
               <a href="#" class="approch nav_link" target="_blank">
                 Our Approch</a
               >
-
+              <img src="dot.png" alt="dot" class="dot" />
               <a href="#" class="work" target="_blank">Our Work</a>
 
               <a href="#" class="btn right" target="_blank"
@@ -212,56 +212,58 @@
             <p class="title5_p">We are added our featured works below</p>
             <div class="line forblock4"></div>
           </div>
-          <div class="project_bar">
-            <div class="miniblock one">
-              <i class="far fa-paper-plane"></i>
-              <h3>Project Name</h3>
-              <p>Facebook marketing</p>
+          <div class="projects_wrap">
+            <div class="project_bar">
+              <div class="miniblock one">
+                <i class="far fa-paper-plane"></i>
+                <h3>Project Name</h3>
+                <p>Facebook marketing</p>
+              </div>
+              <div class="previews">
+                <img
+                  src="ourwork_jpg/slide2.jpg"
+                  class="photos_of_project"
+                  alt="Camera"
+                />
+              </div>
+              <div class="miniblock two">
+                <i class="far fa-paper-plane"></i>
+                <h3>Project Name</h3>
+                <p>Landing page</p>
+              </div>
+              <div class="previews">
+                <img
+                  src="ourwork_jpg/slide4.jpg"
+                  class="photos_of_project"
+                  alt="Tree"
+                />
+              </div>
             </div>
-            <div class="previews">
-              <img
-                src="ourwork_jpg/slide2.jpg"
-                class="photos_of_project"
-                alt="Camera"
-              />
-            </div>
-            <div class="miniblock two">
-              <i class="far fa-paper-plane"></i>
-              <h3>Project Name</h3>
-              <p>Landing page</p>
-            </div>
-            <div class="previews">
-              <img
-                src="ourwork_jpg/slide4.jpg"
-                class="photos_of_project"
-                alt="Tree"
-              />
-            </div>
-          </div>
-          <div class="secondrow">
-            <div class="miniblock one">
-              <i class="far fa-paper-plane"></i>
-              <h3>Project Name</h3>
-              <p>Facebook marketing</p>
-            </div>
-            <div class="previews">
-              <img
-                src="ourwork_jpg/slide6.jpg"
-                class="photos_of_project"
-                alt="Wooden bridge"
-              />
-            </div>
-            <div class="miniblock two">
-              <i class="far fa-paper-plane"></i>
-              <h3>Project Name</h3>
-              <p>Landing page</p>
-            </div>
-            <div class="previews">
-              <img
-                src="ourwork_jpg/slide8.jpg"
-                class="photos_of_project"
-                alt="Road in the forest"
-              />
+            <div class="secondrow">
+              <div class="miniblock one">
+                <i class="far fa-paper-plane"></i>
+                <h3>Project Name</h3>
+                <p>Facebook marketing</p>
+              </div>
+              <div class="previews">
+                <img
+                  src="ourwork_jpg/slide6.jpg"
+                  class="photos_of_project"
+                  alt="Wooden bridge"
+                />
+              </div>
+              <div class="miniblock two">
+                <i class="far fa-paper-plane"></i>
+                <h3>Project Name</h3>
+                <p>Landing page</p>
+              </div>
+              <div class="previews">
+                <img
+                  src="ourwork_jpg/slide8.jpg"
+                  class="photos_of_project"
+                  alt="Road in the forest"
+                />
+              </div>
             </div>
           </div>
         </div>
