fix media for sections

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                 >Free Consultation</a
               >
             </div>
+            <button class="menu_hamburger">
+              <span class="menu_hamburger_line"></span>
+              <span class="menu_hamburger_line"></span>
+              <span class="menu_hamburger_line"></span>
+            </button>
           </div>
           <!-- /block1 -->
         </div>
@@ -132,7 +137,7 @@
           </div>
           <div class="step1">
             <div class="redblock">
-              <span class="num">1</span>
+              <span class="num num_1_2">1</span>
               <span class="num_text">step</span>
             </div>
             <img src="approch_png/st1.png" alt="Camera" class="imgst1" />
@@ -149,7 +154,7 @@
 
           <div class="step2">
             <div class="redblock even">
-              <span class="num">2</span>
+              <span class="num num_1_2">2</span>
               <span class="num_text">step</span>
             </div>
             <img src="approch_png/st2.png" alt="Mountains" class="imgst1" />
@@ -213,57 +218,54 @@
             <div class="line forblock4"></div>
           </div>
           <div class="projects_wrap">
-            <div class="project_bar">
-              <div class="miniblock one">
-                <i class="far fa-paper-plane"></i>
-                <h3>Project Name</h3>
-                <p>Facebook marketing</p>
-              </div>
-              <div class="previews">
-                <img
-                  src="ourwork_jpg/slide2.jpg"
-                  class="photos_of_project"
-                  alt="Camera"
-                />
-              </div>
-              <div class="miniblock two">
-                <i class="far fa-paper-plane"></i>
-                <h3>Project Name</h3>
-                <p>Landing page</p>
-              </div>
-              <div class="previews">
-                <img
-                  src="ourwork_jpg/slide4.jpg"
-                  class="photos_of_project"
-                  alt="Tree"
-                />
-              </div>
+            <div class="miniblock one el_1">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Facebook marketing</p>
             </div>
-            <div class="secondrow">
-              <div class="miniblock one">
-                <i class="far fa-paper-plane"></i>
-                <h3>Project Name</h3>
-                <p>Facebook marketing</p>
-              </div>
-              <div class="previews">
-                <img
-                  src="ourwork_jpg/slide6.jpg"
-                  class="photos_of_project"
-                  alt="Wooden bridge"
-                />
-              </div>
-              <div class="miniblock two">
-                <i class="far fa-paper-plane"></i>
-                <h3>Project Name</h3>
-                <p>Landing page</p>
-              </div>
-              <div class="previews">
-                <img
-                  src="ourwork_jpg/slide8.jpg"
-                  class="photos_of_project"
-                  alt="Road in the forest"
-                />
-              </div>
+            <div class="previews el_2">
+              <img
+                src="ourwork_jpg/slide2.jpg"
+                class="photos_of_project"
+                alt="Camera"
+              />
+            </div>
+            <div class="miniblock two el_3">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Landing page</p>
+            </div>
+            <div class="previews project_1 el_4">
+              <img
+                src="ourwork_jpg/slide4.jpg"
+                class="photos_of_project"
+                alt="Tree"
+              />
+            </div>
+            <div class="previews project_2 el_5">
+              <img
+                src="ourwork_jpg/slide8.jpg"
+                class="photos_of_project"
+                alt="Road in the forest"
+              />
+            </div>
+
+            <div class="miniblock one el_6">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Facebook marketing</p>
+            </div>
+            <div class="previews el_7">
+              <img
+                src="ourwork_jpg/slide6.jpg"
+                class="photos_of_project"
+                alt="Wooden bridge"
+              />
+            </div>
+            <div class="miniblock two el_8">
+              <i class="far fa-paper-plane"></i>
+              <h3>Project Name</h3>
+              <p>Landing page</p>
             </div>
           </div>
         </div>
@@ -359,6 +361,9 @@
       <p class="pEnd_after_container">
         Cssauthor.com © 2014 All Rights Reserved
       </p>
+      <a href="#" class="btn_to_top">
+        <img src="return.png" alt="Button to top" />
+      </a>
     </footer>
 
     <script
